cmake_minimum_required(VERSION 3.4)
set(PROJECT_NAME Toolkit)
project(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 11)
message(STATUS "正在编译 ${PROJECT_NAME}")

if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
    add_compile_options(-g)
endif ()

add_subdirectory(Communication)
add_subdirectory(Database)
add_subdirectory(Json)
add_subdirectory(Log)
add_subdirectory(Network)
add_subdirectory(NotificationCenter)
add_subdirectory(SharedPreference)
add_subdirectory(SQLite3)
add_subdirectory(Thread)
add_subdirectory(ThreadDispatcher)
add_subdirectory(ThreadPool)
add_subdirectory(Utils)
add_subdirectory(ZipWrapper)
